test/zinc_source/compile_errors/enums/14_enum_self_method.zn
// expected-error: enum method 'Message.bad' cannot use self
enum Message {
    Quit

    fn bad() {
        print(self)
    }
}

fn main() {
    print(Message.Quit)
}
